# host_guest

./: .gitignore  README.md  conda-env.yml  pyproject.toml
host_guest/energy/: compute_sp.py  docker.py
host_guest/geometry/: pore_analyser.py  util.py
host_guest/io/: coords_library.py  filetyper.py
host_guest/setter/: cif_from_json.py  compute_xtb.py  create_complexes_from_ase_atoms.py  create_complexes_from_folder.py  generate_complexes.py
tests/: test_docker.py  test_geometry.py
tests/test_data/: biphenyl.xyz
