[tool.poetry]
name = "host_guest"
version = "0.1.0"
description = "A python module for creating inter molecular complexes"
authors = ["Dinga Wonanke"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ase = "^3.23.0"
pandas = "^2.2.2"

[tool.poetry.scripts]
dock_folder ="host_guest.setter.create_complexes_from_folder:main"
dock_structure ="host_guest.setter.create_complexes_from_folder:main2"
dock_from_ase="host_guest.setter.create_complexes_from_ase_atoms:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
